--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/IMG_2861.jpg')">
+        <header class="masthead" style="background-image: src('assets/img/IMG_2861.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -49,6 +49,7 @@
                 </div>
             </div>
         </header>
+        <img src="assets/img/IMG_2861.jpg" alt="Soccer Pic" height="400 px">
         <!-- Main Content-->
         <main class="mb-4">
             <div class="container px-4 px-lg-5">
