--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <!-- <header class="masthead" style="background-image: url('assets/img/IMG_2861.jpg')"> -->
-            <img src="assets/img/IMG_2861.jpg" alt="Soccer picture" width="100%">
+        <header class="masthead" style="background-image: url('https://brightspotcdn.byu.edu/dims4/default/53fd0a2/2147483647/strip/true/crop/7424x4176+0+587/resize/1200x675!/quality/90/?url=https%3A%2F%2Fbrigham-young-brightspot.s3.amazonaws.com%2F97%2F27%2F4c9b0cec443f88a02fa452cbf45f%2F22msoc-photoday-058.jpg')">
+        </header>
+            <!-- <img src="assets/img/IMG_2861.jpg" alt="Soccer picture" height="500px"> -->
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
